--- a/app/css/portfolio.css
+++ b/app/css/portfolio.css
@@ -12,9 +12,9 @@
 	-webkit-border-radius: 5px;
 			border-radius: 5px;
 	background-color: #fff;
-	-webkit-box-shadow: 0px 2px 1px 0px rgba(9, 9, 9, 0.07);
-	   -moz-box-shadow: 0px 2px 1px 0px rgba(9, 9, 9, 0.07);
-			box-shadow: 0px 2px 1px 0px rgba(9, 9, 9, 0.07);
+	-webkit-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07);
+	   -moz-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07);
+			box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07);
 	margin-right: 27px;
 	margin-bottom: 25px;
 }
@@ -53,8 +53,7 @@
 	margin-top: -2px;
 	padding: 10px 0 10px 0;
 	text-align: center;
-	text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.75);
-    width: 164px;	
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.75);	
 }
 .project a{
 	text-decoration: none;
@@ -75,10 +74,10 @@
 	background-image: -moz-linear-gradient( 90deg, rgb(237,235,234) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
 	background-image: -webkit-linear-gradient( 90deg, rgb(237,235,234) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
 	background-image: -ms-linear-gradient( 90deg, rgb(237,235,234) 0%, rgb(251,249,249) 94%, rgb(255,255,255) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#edebea',GradientType=0 );
-	-webkit-box-shadow: 0px 2px 1px 0px rgba(9, 9, 9, 0.07),inset 0px -2px 3px 0px rgba(41, 41, 41, 0.05);
-	   -moz-box-shadow: 0px 2px 1px 0px rgba(9, 9, 9, 0.07),inset 0px -2px 3px 0px rgba(41, 41, 41, 0.05);
-			box-shadow: 0px 2px 1px 0px rgba(9, 9, 9, 0.07),inset 0px -2px 3px 0px rgba(41, 41, 41, 0.05);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#edebea',GradientType=0 )";
+	-webkit-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
+	   -moz-box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
+			box-shadow: 0 2px 1px 0 rgba(9, 9, 9, 0.07),inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
 }
 .add_project:before{
 	content: "";
@@ -86,15 +85,15 @@
 	top: 40%;
 	left: 50%;
 	-webkit-transform: translateX(-50%) translateY(-50%);
+	-moz-transform: translateY(-50%) translateY(-50%);
 	-ms-transform: translateX(-50%) translateY(-50%);
 	-o-transform: translateX(-50%) translateY(-50%);
 	transform: translateX(-50%) translateY(-50%);
 	-webkit-border-radius: 50%;
 			border-radius: 50%;
-	background-color: rgba(199, 199, 199, 0);
-	-webkit-box-shadow: 1px 1px 1px 0px rgba(255, 255, 255, 0.8),inset 1px 1px 1px 0px rgba(199, 199, 199, 0.85);
-	   -moz-box-shadow: 1px 1px 1px 0px rgba(255, 255, 255, 0.8),inset 1px 1px 1px 0px rgba(199, 199, 199, 0.85);
-			box-shadow: 1px 1px 1px 0px rgba(255, 255, 255, 0.8),inset 1px 1px 1px 0px rgba(199, 199, 199, 0.85);
+	-webkit-box-shadow: 1px 1px 1px 0 rgba(255, 255, 255, 0.8),inset 1px 1px 1px 0 rgba(199, 199, 199, 0.85);
+	   -moz-box-shadow: 1px 1px 1px 0 rgba(255, 255, 255, 0.8),inset 1px 1px 1px 0 rgba(199, 199, 199, 0.85);
+			box-shadow: 1px 1px 1px 0 rgba(255, 255, 255, 0.8),inset 1px 1px 1px 0 rgba(199, 199, 199, 0.85);
 	width: 53px;
 	height: 54px;
 }
@@ -105,6 +104,7 @@
 	top: 41%;
 	left: 50%;
 	-webkit-transform: translateX(-50%) translateY(-50%);
+	-moz-transform: translateY(-50%) translateY(-50%);
 	-ms-transform: translateX(-50%) translateY(-50%);
 	-o-transform: translateX(-50%) translateY(-50%);
 	transform: translateX(-50%) translateY(-50%);
@@ -118,17 +118,17 @@
 	background-image: -moz-linear-gradient( 90deg, rgb(194,192,192) 0%, rgb(227,225,225) 87%, rgb(230,228,228) 90%, rgb(232,231,231) 100%);
 	background-image: -webkit-linear-gradient( 90deg, rgb(194,192,192) 0%, rgb(227,225,225) 87%, rgb(230,228,228) 90%, rgb(232,231,231) 100%);
 	background-image: -ms-linear-gradient( 90deg, rgb(194,192,192) 0%, rgb(227,225,225) 87%, rgb(230,228,228) 90%, rgb(232,231,231) 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e7e7', endColorstr='#c2c0c0',GradientType=0 );
-	-webkit-box-shadow: inset 0px -2px 3px 0px rgba(41, 41, 41, 0.05);
-	   -moz-box-shadow: inset 0px -2px 3px 0px rgba(41, 41, 41, 0.05);
-			box-shadow: inset 0px -2px 3px 0px rgba(41, 41, 41, 0.05);
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient( startColorstr='#e8e7e7', endColorstr='#c2c0c0',GradientType=0 )";
+	-webkit-box-shadow: inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
+	   -moz-box-shadow: inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
+			box-shadow: inset 0 -2px 3px 0 rgba(41, 41, 41, 0.05);
 }
 
 .add_project:hover:before {
 	background-color: #d7d7d7;
-	-webkit-box-shadow: 0px 1px -1px 0px rgba(255, 255, 255, 0.4),inset 0.5px 0.866px 0px 0px rgba(199, 199, 199, 0.75);
-	   -moz-box-shadow: 0px 1px -1px 0px rgba(255, 255, 255, 0.4),inset 0.5px 0.866px 0px 0px rgba(199, 199, 199, 0.75);
-			box-shadow: 0px 1px -1px 0px rgba(255, 255, 255, 0.4),inset 0.5px 0.866px 0px 0px rgba(199, 199, 199, 0.75);
+	-webkit-box-shadow: 0 1px -1px 0 rgba(255, 255, 255, 0.4),inset 0.5px 0.866px 0 0 rgba(199, 199, 199, 0.75);
+	   -moz-box-shadow: 0 1px -1px 0 rgba(255, 255, 255, 0.4),inset 0.5px 0.866px 0 0 rgba(199, 199, 199, 0.75);
+			box-shadow: 0 1px -1px 0 rgba(255, 255, 255, 0.4),inset 0.5px 0.866px 0 0 rgba(199, 199, 199, 0.75);
 }
 .add_project_text{
 	color: rgb(114, 112, 112);
@@ -136,7 +136,7 @@
 	font-family: "OpenSansSemiBold";
 	line-height: 1.571;
 	text-align: left;
-	text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.75);
+	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.75);
 	position: absolute;
 	top: 67%;
 	left: 24px; 
